--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>Gamer Zone</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
 <body>
-     
+     <header>
+          <div class="container">
+          <div class="logo">
+               <img src="./images/a.png" alt="">
+              <h4 class="web-title"><span class="pink-text">G</span>amer</h4>
+          </div>
+              <div class="menu">
+              <ul>
+               <li>About Us</li>
+               <li>Developer</li>
+               <li>Follow Us On</li>
+              </ul>
+          </div>
+          </div>
+
+     </header>
+     <main>
+
+     </main>
+     <footer>
+
+     </footer>
 </body>
 </html>
