--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
               </ul>
           </div>
           </div>
-
+          <div class="banner">
+               <div class="banner-descript">
+                    <div>
+                    <h3 class="banner-heading">PLAY LIKE THE</h3>
+                    <h1>G.O.A.T</h1>
+                    <p>1-click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+               </div>
+               <div class="button">
+                    <button class="btn-primary">Sign In</button>
+                    <button class="btn2">Go Rogue</button>
+               </div>
+               </div>
+               <div class="banner-img">
+                    <img src="./images/b.png" alt="">
+               </div>
+          </div>
      </header>
      <main>
 
