--- a/index.html
+++ b/index.html
@@ -20,33 +20,102 @@
               <ul>
                <li>About Us</li>
                <li>Developer</li>
-               <li>Follow Us On</li>
+               <li><button class="icon-btn">Follow Us On</button></li>
               </ul>
           </div>
           </div>
           <div class="banner">
                <div class="banner-descript">
-                    <div>
-                    <h3 class="banner-heading">PLAY LIKE THE</h3>
-                    <h1>G.O.A.T</h1>
+                   
+                    <h3 class="black">PLAY LIKE THE</h3>
+                    <h1 class="radiant">G.O.A.T</h1>
                     <p>1-click instant play</p>
                     <p>No Download</p>
                     <p>1000s of supported online games</p>
-               </div>
+
                <div class="button">
                     <button class="btn-primary">Sign In</button>
                     <button class="btn2">Go Rogue</button>
                </div>
-               </div>
-               <div class="banner-img">
-                    <img src="./images/b.png" alt="">
+              </div>
+               <div>
+                    <img class="banner-img" src="./images/b.png" alt="">
                </div>
           </div>
-     </header>
+          <div class="online">
+          <h2><span class="black">Online Games</span><span class="pink"> Funny Videos</span></h2>
+          <h5>A Collection of Hilarious Videos to Brighten Your Day</h5>
+         </div>
+          <div class="online-games">
+              <figure>
+          <img class="games" src="./images/d.png" alt="">
+          <figcaption>No Downloads.No Installs.Play <br>games instantly on Gamers.</figcaption>
+               </figure>
+               <figure>
+        <img class="games" src="./images/e.png" alt="">
+        <figcaption>Did you score?#unblockgamers <br>#school</figcaption>
+          </figure>
+          <figure>
+         <img class="games" src="./images/f.png" alt="">
+     <figcaption>Breaking game records <br> like OG</figcaption>
+     </figure>
+     <figure>
+         <img class="games" src="./images/g.png" alt="">
+          <figcaption>Busted gaming on school laptop <br>But you are still lit.</figcaption>
+     </figure>
+     </div>
+         <div class="play">
+          <div>
+          <span class="pink"><h2>Play Instantly,</span><br>
+              <span class="black"> No Downloads
+               No Installs.</h2></span>
+               <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+         </div>
+         <div class="play-container">
+          <div class="box-horse"><img src="./images/h.png" alt=""></div>
+          <div class="box-pinky"><img src="./images/i.png" alt=""></div>
+         </div>
+</header>
      <main>
-
+          <div class="button-container">
+               <button class="bttn"><img src="./images/u.png" alt="">Action Games</button>
+               <button class="bttn"><img src="./images/m.png" alt="">Adventure Games</button>
+               <button class="bttn"><img src="./images/n.png" alt="">Arcade Games</button>
+               <button class="bttn"><img src="./images/o.png" alt="">Educational Games</button>
+               <button class="bttn"><img src="./images/p.png" alt="">World Games</button>
+          </div>
      </main>
-     <footer>
+     <footer class="ending">
+          <div class="logo1">
+               <img src="./images/a.png" alt="">
+              <h4 class="web-title"><span class="pink-text">G</span><span class="white2">amer</span></h4>
+          </div>
+          <div class="line1">
+           <ul>
+            <span class="white">
+
+            <li>Our Story</li>
+             <li>Games</li>
+             <li>Web Games</li>
+             <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+          </span>
+          </ul>
+          </div>
+         
+          <div>
+               <ul>
+              <span class="grey">
+               <li>Terms & Conditions</li>
+               <li>Privacy Policy<li>
+               <li>Cookie Policy</li>
+               <li>Privacy Settings</li>
+               </span>
+          </ul>
+              <br>
+              <span class="grey">Play Games &copy;Gamer &copy; 2020-2033 Gamer Bangladesh All rigts reserved.</span>
+          </div>
 
      </footer>
 </body>
