--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
      <title>Gamer Zone</title>
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +57,7 @@
         <figcaption>Did you score?#unblockgamers <br>#school</figcaption>
           </figure>
           <figure>
-         <img class="games" src="./images/f.png" alt="">
+         <img class="games3" src="./images/f.png" alt="">
      <figcaption>Breaking game records <br> like OG</figcaption>
      </figure>
      <figure>
